--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,11 +12,13 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "HOST=localhost react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+
+  "proxy": "http://localhost:8081",
   "eslintConfig": {
     "extends": [
       "react-app",
